fix: buttons unreadable on hover on accounts/profile page

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -128,6 +128,7 @@
         border-radius: 0;
         &:hover {
           color: var(--bg-color);
+          background-color: var(--text-color);
         }
       }
     }
